# pixman

./: CMakeLists.txt  aaa_config.h  and_pixman.vcxproj  and_pixman.vcxproj.filters  config.h  deployment.rc  ltmain.sh  m_pixman.vcxproj  nord_pixman.vcxproj  nord_pixman.vcxproj.filters  pixman.cbp  pixman.def  pixman.sln  pixman.vcxproj  pixman.vcxproj.filters
demos/: quad2quad.c  scale.c
include/pixman/: pixman.h
pixman/: pixman-edge.c  pixman-implementation.c  pixman-matrix.c  pixman-trap.c
pixman.xcodeproj/: project.pbxproj
pixman.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: _ca2freeimage.xcscheme
