cmake_minimum_required(VERSION 2.8.12)
project(cairo C)


list(APPEND library_source
        src/cairo.c
        src/cairo-analysis-surface.c
        src/cairo-arc.c
        src/cairo-array.c
        src/cairo-atomic.c
        src/cairo-base64-stream.c
        src/cairo-base85-stream.c
        src/cairo-bentley-ottmann.c
        src/cairo-bentley-ottmann-rectangular.c
        src/cairo-bentley-ottmann-rectilinear.c
        src/cairo-beos-surface.cpp
        src/cairo-botor-scan-converter.c
        src/cairo-boxes.c
        src/cairo-boxes-intersect.c
        src/cairo-cache.c
        src/cairo-cairoerror.c
        src/cairo-cff-subset.c
        src/cairo-clip.c
        src/cairo-clip-boxes.c
        src/cairo-clip-polygon.c
        src/cairo-clip-region.c
        src/cairo-clip-surface.c
        src/cairo-clip-tor-scan-converter.c
        src/cairo-cogl-context.c
        src/cairo-cogl-gradient.c
        src/cairo-cogl-surface.c
        src/cairo-cogl-utils.c
        src/cairo-color.c
        src/cairo-composite-rectangles.c
        src/cairo-compositor.c
        src/cairo-contour.c
        src/cairo-damage.c
        src/cairo-debug.c
        src/cairo-default-context.c
        src/cairo-deflate-stream.c
        src/cairo-device.c
        src/cairo-directfb-surface.c
        src/cairo-egl-context.c
        src/cairo-error.c
        src/cairo-fallback-compositor.c
        src/cairo-features.pc.in
        src/cairo-features-uninstalled.pc.in
        src/cairo-fixed.c
        src/cairo-font-face.c
        src/cairo-font-face-twin.c
        src/cairo-font-face-twin-data.c
        src/cairo-font-options.c
        src/cairo-freed-pool.c
        src/cairo-freelist.c
        src/cairo-ft-font.c
        src/cairo-gl-composite.c
        src/cairo-gl-device.c
        src/cairo-gl-dispatch.c
        src/cairo-gl-glyphs.c
        src/cairo-gl-gradient.c
        src/cairo-gl-info.c
        src/cairo-gl-msaa-compositor.c
        src/cairo-gl-operand.c
        src/cairo-gl-shaders.c
        src/cairo-gl-source.c
        src/cairo-gl-spans-compositor.c
        src/cairo-gl-surface.c
        src/cairo-gl-traps-compositor.c
        src/cairo-glx-context.c
        src/cairo-gstate.c
        src/cairo-hash.c
        src/cairo-hull.c
        src/cairo-image-compositor.c
        src/cairo-image-info.c
        src/cairo-image-source.c
        src/cairo-image-surface.c
        src/cairo-line.c
        src/cairo-lzw.c
        src/cairo-mask-compositor.c
        src/cairo-matrix.c
        src/cairo-mempool.c
        src/cairo-mesh-pattern-rasterizer.c
        src/cairo-misc.c
        src/cairo-mono-scan-converter.c
        src/cairo-mutex.c
        src/cairo-no-compositor.c
        src/cairo-observer.c
        src/cairo-os2-surface.c
        src/cairo-output-stream.c
        src/cairo-paginated-surface.c
        src/cairo-path.c
        src/cairo-path-bounds.c
        src/cairo-path-fill.c
        src/cairo-path-fixed.c
        src/cairo-path-in-fill.c
        src/cairo-path-stroke.c
        src/cairo-path-stroke-boxes.c
        src/cairo-path-stroke-polygon.c
        src/cairo-path-stroke-traps.c
        src/cairo-path-stroke-tristrip.c
        src/cairo-pattern.c
        src/cairo-pdf-interchange.c
        src/cairo-pdf-operators.c
        src/cairo-pdf-shading.c
        src/cairo-pdf-surface.c
        src/cairo-pen.c
        src/cairo-png.c
        src/cairo-polygon.c
        src/cairo-polygon-intersect.c
        src/cairo-polygon-reduce.c
        src/cairo-ps-surface.c
        src/cairo-qt-surface.cpp
        src/cairo-quartz-font.c
        src/cairo-quartz-image-surface.c
        src/cairo-quartz-surface.c
        src/cairo-raster-source-pattern.c
        src/cairo-recording-surface.c
        src/cairo-rectangle.c
        src/cairo-rectangular-scan-converter.c
        src/cairo-region.c
        src/cairo-rtree.c
        src/cairo-scaled-font.c
        src/cairo-scaled-font-subsets.c
        src/cairo-script-surface.c
        src/cairo-shape-mask-compositor.c
        src/cairo-slope.c
        src/cairo-spans.c
        src/cairo-spans-compositor.c
        src/cairo-spline.c
        src/cairo-stroke-dash.c
        src/cairo-stroke-style.c
        src/cairo-surface.c
        src/cairo-surface-clipper.c
        src/cairo-surface-fallback.c
        src/cairo-surface-observer.c
        src/cairo-surface-offset.c
        src/cairo-surface-snapshot.c
        src/cairo-surface-subsurface.c
        src/cairo-surface-wrapper.c
        src/cairo-svg-surface.c
        src/cairo-tag-attributes.c
        src/cairo-tag-stack.c
        src/cairo-tee-surface.c
        src/cairo-time.c
        src/cairo-tor22-scan-converter.c
        src/cairo-tor-scan-converter.c
        src/cairo-toy-font-face.c
        src/cairo-traps.c
        src/cairo-traps-compositor.c
        src/cairo-tristrip.c
        src/cairo-truetype-subset.c
        src/cairo-type1-fallback.c
        src/cairo-type1-glyph-names.c
        src/cairo-type1-subset.c
        src/cairo-type3-glyph-surface.c
        src/cairo-unicode.c
        src/cairo-uninstalled.pc.in
        src/cairo-user-font.c
        src/cairo-version.c
        src/cairo-vg-surface.c
        src/cairo-wgl-context.c
        src/cairo-wideint.c
        src/cairo-xcb-connection.c
        src/cairo-xcb-connection-core.c
        src/cairo-xcb-connection-render.c
        src/cairo-xcb-connection-shm.c
        src/cairo-xcb-resources.c
        src/cairo-xcb-screen.c
        src/cairo-xcb-shm.c
        src/cairo-xcb-surface.c
        src/cairo-xcb-surface-core.c
        src/cairo-xcb-surface-render.c
        src/cairo-xlib-core-compositor.c
        src/cairo-xlib-display.c
        src/cairo-xlib-fallback-compositor.c
        src/cairo-xlib-render-compositor.c
        src/cairo-xlib-screen.c
        src/cairo-xlib-source.c
        src/cairo-xlib-surface.c
        src/cairo-xlib-surface-shm.c
        src/cairo-xlib-visual.c
        src/cairo-xlib-xcb-surface.c
        src/cairo-xml-surface.c
)

add_library(${PROJECT_NAME}
  SHARED ${library_source}
)


if(${this_system_libraries})
  target_link_libraries(${PROJECT_NAME} PRIVATE ${this_system_libraries})
endif()
